Fixed - Loading modal not visible in Chrome Adjusted CSS to make it visible in chrome

--- a/styles.css
+++ b/styles.css
@@ -564,6 +564,7 @@ box-sizing: border-box;
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.4); /* translucent backdrop */
+  pointer-events: auto;
 }
 
 .vslot-modal .modal-content {
@@ -595,9 +596,8 @@ box-sizing: border-box;
 
 /* Loading modal styles */
 #loadingModal {
-  display: none;
   position: fixed;
-  z-index: 10001;
+  z-index: 100001;
   left: 0;
   top: 0;
   width: 100%;
